# guardspine-verify

./: .gitignore  HELLO_BUNDLE.md  LICENSE  README.md  pyproject.toml
guardspine_verify/: __init__.py  cli.py  verifier.py
tests/: test_golden_vectors.py  test_verifier_smoke.py
tests/test_vectors/: README.md  external-public-key.pem  external-signed-bundle.json  tampered-hash-chain.json  valid-bundle.json
