[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardspine-verify"
version = "0.1.0"
description = "Offline verification for GuardSpine evidence bundles"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "GuardSpine Contributors" }
]
keywords = ["guardspine", "evidence", "verification", "governance", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
    "jsonschema>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
guardspine-verify = "guardspine_verify.cli:main"

[project.urls]
Homepage = "https://github.com/guardspine/guardspine-verify"
Documentation = "https://guardspine.io/docs/verify"
Repository = "https://github.com/guardspine/guardspine-verify"
Issues = "https://github.com/guardspine/guardspine-verify/issues"

[tool.hatch.build.targets.wheel]
packages = ["guardspine_verify"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=guardspine_verify"
